--- a/rclone-mount/Dockerfile
+++ b/rclone-mount/Dockerfile
@@ -4,7 +4,8 @@ ARG RCLONE_VERSION="v1.53.3"
 ARG OVERLAY_VERSION="v1.22.1.0"
 ARG OVERLAY_ARCH="amd64"
 
-ENV DEBUG="false" \
+ENV VFS="false" \
+    DEBUG="false" \
     GOPATH="/go" \
     GO111MODULE="on" \
     AccessFolder="/mnt" \
